added counter data points

--- a/admin/index.html
+++ b/admin/index.html
@@ -43,6 +43,9 @@
             'current.1',
             'current.2',
             'current.ALL',
+            'counter.ALL',
+            'counter.A',
+            'counter.B',
             'min_current.0',
             'min_current.1',
             'min_current.2',
