added option to not update state in case of an error

--- a/admin/index.html
+++ b/admin/index.html
@@ -292,6 +292,7 @@
         <tr class="server"><td><label class="translate" for="ip">IP Address of OWFS Server:</label></td><td class="admin-icon"></td><td><input class="value" id="ip"/></td></tr>
         <tr class="server"><td><label class="translate" for="port">Port of OWFS Server:</label></td><td class="admin-icon"></td><td><input class="value number" id="port" size="5"/></td></tr>
         <tr><td><label class="translate" for="interval">Poll interval(sec):</label></td><td class="admin-icon"></td><td><input class="value number" id="interval" size="6"/></td></tr>
+        <tr><td><label class="translate" for="noStateChangeOnError">No state change on error</label></td><td class="admin-icon"></td><td><input class="value" id="noStateChangeOnError" type="checkbox"/></td></tr>
     </table>
     <h4 class="translate">Wires addresses</h4>
     <div id="values" style="width: 100%; height: calc(100% - 280px)">
