--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -285,6 +285,10 @@
                     <input class="value" id="interval" min="0" max="100000"/>
                     <label class="translate" for="interval">Poll interval(sec):</label>
                 </div>
+                <div class="col s12 m4">
+                    <input class="value" id="noStateChangeOnError" type="checkbox"/>
+                    <label class="translate" for="noStateChangeOnError">No state change on error</label>
+                </div>
             </div>
         </div>
         <div id="tab-devices" class="col s12 page">
